# sigil-py

./: README.md  pyproject.toml
.github/workflows/: publish.yml
sigil_protocol/: __init__.py  autogen.py  crewai.py  langchain.py  mcp_agent.py  openai_agents.py  scanner.py
tests/: test_scanner.py
