[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sigil-protocol"
version = "0.1.0"
description = "SIGIL security layer for AI agent tool calls — scans MCP tool arguments for leaked secrets, enforces policies, and writes audit logs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["sigil", "mcp", "security", "ai-agent", "langchain", "crewai", "autogen", "secrets-scanning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "httpx>=0.25",
    "pydantic>=2.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.1"]
crewai   = ["crewai>=0.1"]
autogen  = ["pyautogen>=0.2"]
mcp      = ["mcp>=0.9"]
openai   = ["openai-agents>=0.1"]
all      = [
    "langchain-core>=0.1",
    "crewai>=0.1",
    "pyautogen>=0.2",
    "mcp>=0.9",
]

[project.urls]
Homepage      = "https://sigil-protocol.org"
Repository    = "https://github.com/sigil-eu/sigil"
Documentation = "https://sigil-protocol.org"
"Bug Tracker" = "https://github.com/sigil-eu/sigil/issues"

[tool.hatch.build.targets.wheel]
packages = ["sigil_protocol"]
